--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dbthanhbinh/reactapp#readme",
   "dependencies": {
+    "eslint": "^4.19.1",
     "express": "^4.16.3",
     "nodemon": "^1.17.3"
   }
