--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "nodemon": "^1.17.3"
   }
 }
