--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "mongoose": "^5.0.16"
   }
 }
