--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
+    "logger": "0.0.1",
     "nodemon": "^1.17.3"
   },
   "devDependencies": {
