--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "logger": "0.0.1",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "mongoose": "^5.0.16"
