--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/dbthanhbinh/reactapp#readme",
   "dependencies": {
     "ajv": "^6.5.0",
+    "async": "^2.6.0",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "logger": "0.0.1",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
